Archive2/ac/ad466706587066/output
main.cpp:7:1: error: 'mutex' in namespace 'std' does not name a type
 std::mutex cout_mutex;
 ^
main.cpp: In function 'void increase_rage(const string&)':
main.cpp:12:5: error: 'lock_guard' is not a member of 'std'
     std::lock_guard<std::mutex> lock(cout_mutex);
     ^
main.cpp:12:21: error: 'mutex' is not a member of 'std'
     std::lock_guard<std::mutex> lock(cout_mutex);
                     ^
main.cpp:12:38: error: 'cout_mutex' was not declared in this scope
     std::lock_guard<std::mutex> lock(cout_mutex);
                                      ^
main.cpp:12:48: error: 'lock' was not declared in this scope
     std::lock_guard<std::mutex> lock(cout_mutex);
                                                ^
main.cpp: In function 'int main()':
main.cpp:21:9: error: 'lock_guard' is not a member of 'std'
         std::lock_guard<std::mutex> lock(cout_mutex);
         ^
main.cpp:21:25: error: 'mutex' is not a member of 'std'
         std::lock_guard<std::mutex> lock(cout_mutex);
                         ^
main.cpp:21:42: error: 'cout_mutex' was not declared in this scope
         std::lock_guard<std::mutex> lock(cout_mutex);
                                          ^
main.cpp:21:52: error: 'lock' was not declared in this scope
         std::lock_guard<std::mutex> lock(cout_mutex);
                                                    ^
